# OpenForge

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml
backend/: alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/openforge/: __init__.py  config.py  main.py
backend/openforge/api/: __init__.py  admin.py  agent.py  agent_schedules.py  agents.py  attachments.py  auth.py  conversations.py  export.py  global_chat.py  hitl.py  import_api.py  journal.py  knowledge.py  knowledge_upload.py  llm.py  llm_management.py  llm_virtual_providers.py  mcp.py  mcp_management.py  models.py  notes.py  ollama.py  pipelines.py  prompts.py  router.py  runtime.py  search.py  settings.py  skills.py  system.py  targets.py  tasks.py  tool_permissions.py  tool_server.py  tools.py  tts.py  visual_search.py  websocket.py  workspaces.py
backend/openforge/common/: __init__.py
backend/openforge/core/: agent_definition.py  agent_engine.py  agent_execution_engine.py  agent_registry.py  context_assembler.py  embedding.py  embedding_document.py  knowledge_processor.py  liquid_audio_engine.py  llm_council.py  llm_gateway.py  llm_optimizer.py  llm_router.py  markdown_utils.py  (+5 more)
backend/tests/: test_api_integration.py  test_bookmark_content_fallback.py  test_chat_retrieval.py  test_chat_stream_registry.py  test_chat_title_generation.py  test_config_service.py  test_conversation_message_thinking.py  test_conversation_service_title_refresh.py  test_embedding_document.py  test_insights_timeline_extraction.py  test_knowledge_title_generation.py  test_knowledge_title_normalization.py  test_llm_gateway_content_normalization.py  test_note_title_generation.py  test_note_title_normalization.py  test_phase0_migrations.py  test_phase0_prompt_normalization.py  test_phase1_api_smoke.py  test_phase1_no_legacy_imports.py  test_task_audit.py  test_text_word_count.py
(+1589 files in other folders)
