[project]
name = "openforge"
version = "0.1.0"
description = "Self-hosted AI workspace and knowledge management platform"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = """
--strict-config
--strict-markers
--cov=openforge.api.conversations
--cov=openforge.api.search
--cov=openforge.api.tasks
--cov=openforge.services.attachment_pipeline
--cov=openforge.services.automation_config
--cov=openforge.services.config_service
--cov=openforge.schemas.search
--cov=openforge.schemas.workspace
--cov=openforge.utils.text
--cov-report=term-missing
--cov-fail-under=70
"""
