[project]
name = "openforge"
version = "0.1.0"
description = "Self-hosted AI workspace and knowledge management platform"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = """
--strict-config
--strict-markers
--cov=openforge.api.conversations
--cov=openforge.api.search
--cov=openforge.api.tasks
--cov=openforge.services.attachment_pipeline
--cov=openforge.common.config
--cov=openforge.schemas.search
--cov=openforge.schemas.workspace
--cov=openforge.common.text
--cov-report=term-missing
--cov-fail-under=70
"""
