[project]
name = "openforge"
version = "0.1.0"
description = "Self-hosted AI workspace and knowledge management platform"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = """
--strict-config
--strict-markers
"""

[tool.coverage.run]
source = [
    "openforge.api.conversations",
    "openforge.api.search",
    "openforge.api.tasks",
    "openforge.services.attachment_pipeline",
    "openforge.common.config",
    "openforge.schemas.search",
    "openforge.schemas.workspace",
    "openforge.common.text",
]

[tool.coverage.report]
show_missing = true
